--- a/tiger-hsu/index.html
+++ b/tiger-hsu/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Choco Pizza</title>
     <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="layout.css">
     <link rel="stylesheet" href="module.css">
