--- a/tiger-hsu/styles/index.html
+++ b/tiger-hsu/styles/index.html
@@ -5,15 +5,15 @@
     <title>Choco Pizza</title>
     <link rel="stylesheet" href="styles/reset.css">
     <!-- <link rel="stylesheet" href="style.css"> -->
-    <link rel="stylesheet" href="base.css">
-    <link rel="stylesheet" href="layout.css">
-    <link rel="stylesheet" href="module.css">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/layout.css">
+    <link rel="stylesheet" href="styles/module.css">
   </head>
   <body>
     <header>
       <nav>
         <a href="#" id="logo">
-          <img src="img/logo.png" alt="Delicious Logo">
+          <img src="tiger-hsu/img/logo.png" alt="Delicious Logo">
           <h1>Delicious</h1>
           <p id="slogan">The Best Food Blog on the Web</p>
         </a>
